# Rust_Axum_OptiCode

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SeaORM_Concepts.txt  test_api.hurl
bruno/: get_all.bru
config/: docker-compose.yaml  prometheus.yml
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240715_123721_create_posts_table.rs  m20240715_124440_create_comments_table.rs
public/: index.html
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handler.rs  user_handler.rs
src/models/: mod.rs  post_models.rs  user_models.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  user_routes.rs
src/utils/: api_error.rs  guards.rs  jwt.rs  mod.rs
