[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# SEA ORM
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

# AXUM
axum = "0.7.5"
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }

# OTHER
uuid = { version = "1.8.0", features = ["v4"] }
watch = "0.2.3"
serde = "1.0.203"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
