[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# SEA ORM
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.0.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

# AXUM
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header", "multipart"] }
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }

# OTHER
dotenv = "0.15.0"
fast_image_resize = { version = "4.2.1", features = ["image"] }
image = "0.25.2"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
uuid = { version = "1.8.0", features = ["v4"] }
watch = "0.2.3"
axum-prometheus = "0.7.0"
